--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "MongoDB database infrastructure for Next.js application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node --files src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/src/index.js",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^7.8.6"
   },
